Fix loading of character styles to remember the name.

In many cases a character style applied to a smaller piece of text
will have an automatic-style introduced in between to store any extra
properties.  It is important to remember the parent on loading since
otherwise the text just becomes an anonymous piece of formatted
text and we loose the whole advantage of characters styles.

This commit makes sure that we keep this relationship in tact.

BUG:246067

svn path=/trunk/koffice/; revision=1193959